<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.rocket_details.RocketDetailsFragment">

        <LinearLayout
            android:divider="?android:dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <TextView
                android:id="@+id/tvName"
                tools:text="Falcon-1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status" />
            <TextView
                android:id="@+id/tvStatus"
                tools:textColor="@color/green"
                tools:text="Active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />
            <TextView
                android:id="@+id/tvDescription"
                tools:text="The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth."
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        </LinearLayout>
<!--Images-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:divider="?dividerHorizontal"
            android:showDividers="end"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleViewRocketImages"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        </LinearLayout>

<!--        Specs-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:divider="?dividerHorizontal"
            android:showDividers="end"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/specs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_margin="5dp"
                tools:text="Height: 22.25m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvDiameter"
                android:layout_margin="5dp"
                tools:text="Diameter: 3.7m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvMass"
                android:layout_margin="5dp"
                tools:text="Mass: 549054kg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        </LinearLayout>

<!--        Engines-->
        <LinearLayout
            android:divider="?dividerHorizontal"
            android:showDividers="end"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/engines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvNumberOfEngines"
                android:layout_margin="5dp"
                tools:text="Engines: 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvPropellant1"
                android:layout_margin="5dp"
                tools:text="Propellant1: liquid oxygen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvPropellant2"
                android:layout_margin="5dp"
                tools:text="Propellant2: RP-1 kerosene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        </LinearLayout>

<!--        Other facts-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/other_facts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvFirstFlight"
                android:layout_margin="5dp"
                tools:text="First flight: 2006-03-24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCost"
                android:layout_margin="5dp"
                tools:text="Cost per launch: 6700000$"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvSuccessRate"
                android:layout_margin="5dp"
                tools:text="Success rate: 40%"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
