<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_name"/>
        <TextView
            android:id="@+id/tvMissionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:maxLines="2"
            tools:text="Iridium NEXT Mission 1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"/>
        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="Return-to-flight mission after the loss of Amos-6 in September 2016. Iridium NEXT will replace the original Iridium constellation, launched in the late 1990s. Each Falcon mission will carry 10 satellites, with a goal to complete deployment of the 66 plus 9 spare satellite constellation by mid 2018. The first two Iridium qualification units were supposed to ride a Dnepr rocket in April 2016 but were delayed, so Iridium decided to qualify the first batch of 10 satellites instead."/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"/>
        <TextView
            android:id="@+id/tvSuccessful"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:maxLines="2"
            android:textColor="@color/green"
            tools:textColor="@color/green"
            tools:text="Successful"/>

        <Space
            android:id="@+id/spaceVideo"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        
        <LinearLayout
            android:id="@+id/layoutVideo"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgVideo"
                android:src="@drawable/video_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"/>
            <TextView
                android:id="@+id/tvVideo"
                android:textAlignment="textStart"
                android:gravity="center"
                android:paddingLeft="20dp"
                tools:text="https://www.youtube.com/watch?v=7WimRhydggo"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <Space
            android:id="@+id/spaceReddit"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:id="@+id/layoutReddit"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgReddit"
                android:src="@mipmap/reddit_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"/>
            <TextView
                android:id="@+id/tvReddit"
                android:textAlignment="textStart"
                android:gravity="center"
                android:paddingLeft="20dp"
                tools:text="https://www.youtube.com/watch?v=7WimRhydggo"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <Space
            android:id="@+id/spaceNews"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:id="@+id/layoutNews"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgNews"
                android:src="@drawable/ic_baseline_newspaper_24"
                android:layout_width="64dp"
                android:layout_height="64dp"/>
            <TextView
                android:id="@+id/tvNews"
                android:textAlignment="textStart"
                android:gravity="center"
                android:paddingLeft="20dp"
                tools:text="https://spaceflightnow.com/2017/01/14/spacex-resumes-flights-with-on-target-launch-for-iridium/"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

